scrollbar fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,4 @@
  
 .no-scroll {
     overflow: hidden;
-    position: fixed;
-    width: 100%;
 }
